# lammm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen-config.ini
examples/: bad_take.lammm  exp_silly.lammm  extract_lazy.lammm  fibonacci.lammm  grow_infinitely.lammm  test_program.lammm
src/: AST.h  Interpreter.cpp  Interpreter.h  Lammm.cpp  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Typer.cpp  Typer.h  Types.cpp  Types.h  Util.h
src/names/: Names.h
src/tests/: Programs.h  Run.cpp  Tests.cpp  Tests.h
